cancion sonando fixeada. falta vista tablet y cel

--- a/vistamusicasonando.html
+++ b/vistamusicasonando.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/vistamiscancionesfavoritas.css">
+    <link rel="stylesheet" href="CSS/musicasonando.css">
+    <link rel="stylesheet" href="CSS/vistapantallaprincipal.css">
     <link rel="stylesheet" href="CSS/footer.css">
     <title>Musica sonando</title>
 </head>
 <body>
     <header>
-        <h1>Musica sonando</h1>
-        <h2>Nombre de usuario</h2>
-        <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
-        <a href="vistaperfil.html"><img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+        <h1>SPOTILAM</h1>
+        <span>
+            <h2>Nombre de usuario</h2>
+            <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
+        </span>
+        <a class="imgperfil" href="vistaperfil.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
     </header>
     <section class="navegador">
         <nav>
@@ -30,8 +33,11 @@
             </ul>
         </nav>
         <section class="sectionimgbajonav">
-            <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="">
-            <span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl"></i></span>
+            <h1>Musica sonando</h1>
+            <div class="imagen">
+                <img class="image" src="Img/Seven spires.jpg" alt="seven spires" />
+                <div class ="estrella"><span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl"></i></span></div>
+            </div>
             <article class="lorem">Segundo álbum de estudio de este cuarteto estadounidense que, tras conocerse en la escuela superior de música y saber que tenían gustos similares, iniciaron este proyecto con la idea de crear un nuevo enfoque en el que centrar el metal sinfónico. Mucho más teatral, más cinemático y bebiendo de vertientes musicales tan dispares como el power, death melódico, black, Stoner, doom e incluso música clásica.
             </article>
         </section>
