cambios en footer y detalle en el reprod de musica

--- a/vistamisalbumes.html
+++ b/vistamisalbumes.html
@@ -57,7 +57,7 @@
         </section>
     </section>
     <!-- Footer -->
-    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe></body>
+    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe></body>
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
 </body>
 </html>
