--- a/reusables/footer.html
+++ b/reusables/footer.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/footer.css">
-    <title>Vista Perfil</title>
+    <title>Footer</title>
 </head>
 <footer>
     <section class="integrantes">
