--- a/vistaperfil.html
+++ b/vistaperfil.html
@@ -50,6 +50,7 @@
     </main>
 
 <!-- Footer -->
-<iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="auto"></iframe>    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+<iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>
+<script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
 </body>
 </html>
