--- a/vistaregistro.html
+++ b/vistaregistro.html
@@ -41,6 +41,6 @@
         </section>
     </main>
     <!-- Footer -->
-    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe></body></body>
+    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe></body></body>
 
 </html>
