premium y vista pagar fixeada en ambas vistas

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
         <title>Inicio de sesión</title>
     </head>
 
-<body>
-    <main class="contenedor">
-        <form action =# action="post">
-            <input type="text" name="usuario" id="usuario" placeholder="Coloca tu Usuario">
-            <input type="password" name="contraseña" id="contraseña" placeholder="Aquí tu Contraseña">
-            <a href="vistapantallaprincipa.html"><input class="boton" type="button" value="Iniciar Sesión"></a>
-        </form>
-        <section class="registro">
-            <p>¿No tienes usuario? </p><a href="vistaregistro.html">Registrarse</a>
-        </section>
-    </main>
-    <!-- Footer -->
-    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="auto"></iframe>
+    <body>
+        <main class="contenedor">
+            <form action =# action="post">
+                <input type="text" name="usuario" id="usuario" placeholder="Coloca tu Usuario">
+                <input type="password" name="contraseña" id="contraseña" placeholder="Aquí tu Contraseña">
+                <a href="vistapantallaprincipa.html"><input class="boton" type="button" value="Iniciar Sesión"></a>
+            </form>
+            <section class="registro">
+                <p>¿No tienes usuario? </p><a href="vistaregistro.html">Registrarse</a>
+            </section>
+        </main>
+        <!-- Footer -->
+        <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="auto"></iframe>
+    </body>
 </html>
