--- a/planespremium.html
+++ b/planespremium.html
@@ -8,13 +8,14 @@
     <title>Planes Premium</title>
 </head>
 <body class="body">
-    <header>
-        <h1> </h1>
-        <span>
-            <h2>Nombre de usuario</h2>
-            <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
-        </span>
-        <a class="imgperfil" href="vistaperfil.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+    <header class="header">
+        <div class="profile">
+            <h2>Nombre Apellido</h2>
+            <a id= "cerrar" href="index.html"><p id="cerrar">Cerrar sesión</p></a>
+        </div>
+        <a href="vistaperfil.html">
+            <img class="imgperfil" src="https://picsum.photos/50/50" alt="imagen perfil">
+        </a>
     </header>
     <main class="planes">
         <h2 class="premium">Planes Premium</h2>
@@ -47,6 +48,6 @@
     </main>
 
 <!-- Footer -->
-<iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="auto"></iframe>    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+<iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
 </body>
 </html>
