--- a/vistaregistro.html
+++ b/vistaregistro.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <section class="formulario">
-            <form action="">
+            <form action="" method="post">
                 <article>
                     <label for="usuario">Usuario</label>
                     <input type="text" name=usuario id="usuario" placeholder="Usuario">
@@ -41,6 +41,6 @@
         </section>
     </main>
     <!-- Footer -->
-    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe></body></body>
-
+    <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>
+</body>
 </html>
