--- a/vistaregistro.html
+++ b/vistaregistro.html
@@ -37,10 +37,12 @@
             <a class="linkpremium" href="planespremium.html">Premium</a>
         </section>
         <section class="botones">
-                <a href="index.html"><button>Registrarme</button></a>
+                <button>Registrarme</button>
         </section>
     </main>
     <!-- Footer -->
     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>
+    <script src="./vistaregistro.js"></script>
 </body>
+
 </html>
