--- a/planespremium.html
+++ b/planespremium.html
@@ -10,7 +10,7 @@
 <body class="body">
     <header class="header">
         <div class="profile">
-            <h2>Nombre Apellido</h2>
+            <h2 class="nombre-usuario">Nombre Apellido</h2>
             <a id= "cerrar" href="index.html"><p id="cerrar">Cerrar sesión</p></a>
         </div>
         <a href="vistaperfil.html">
@@ -48,6 +48,9 @@
     </main>
 
 <!-- Footer -->
-<iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+<iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="auto"></iframe>    
+<script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+<script src="./reusables/getNombreUsuario.js"></script>
+
 </body>
 </html>
