--- a/vistabuscar.html
+++ b/vistabuscar.html
@@ -14,7 +14,7 @@
             <input  type="button" value="Buscar" />
         </form>
         <span>
-            <h2>Nombre de usuario</h2>
+            <h2 class="nombre-usuario">Nombre de usuario</h2>
             <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
         </span>
         <a class="imgperfil" href="vistaperfil.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
@@ -62,5 +62,7 @@
     <!-- Footer -->
     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+    <script src="./reusables/getNombreUsuario.js"></script>
+
 </body>
 </html>
