--- a/vistamisalbumes.html
+++ b/vistamisalbumes.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Mis Albumes Favoritos</h1>
         <span>
-            <h2>Nombre de usuario</h2>
+            <h2 class="nombre-usuario">Nombre de usuario</h2>
             <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
         </span>
         <a class="imgperfil" href="vistaperfil.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
@@ -59,5 +59,7 @@
     <!-- Footer -->
     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe></body>
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+    <script src="./reusables/getNombreUsuario.js"></script>
+
 </body>
 </html>
