--- a/vistapagar.html
+++ b/vistapagar.html
@@ -9,7 +9,7 @@
 <body>
     <section class="header">
             <div class="profile">
-                <h2>Nombre Apellido</h2>
+                <h2 class="nombre-usuario">Nombre Apellido</h2>
                 <a href="index.html"><p>Cerrar sesión</p></a>
             </div>
             <a href="vistaperfil.html">
@@ -69,5 +69,7 @@
     </main>
     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+    <script src="./reusables/getNombreUsuario.js"></script>
+
 </body>
 </html>
