cambio en vistapagar para q funque

--- a/vistapagar.html
+++ b/vistapagar.html
@@ -57,7 +57,7 @@
                         <input type="text" placeholder="ej 123" name="cvc"></input>
                     </div>
                     <div class="item-9">
-                        <a href="vistapantallaprincipa.html"><button type="submit">Registrarme</button></a>
+                        <a href="vistapantallaprincipa.html"><button>Registrarme</button></a>
                     </div>
                     <div class="item-10">
                         <a href="vistapantallaprincipa.html"><button>Cancelar</button></a>
