--- a/vistapagar.html
+++ b/vistapagar.html
@@ -29,7 +29,7 @@
             <br />
         </section>
         <section class="inputs">
-            <form action="vistapantallaprincipa.html" method="post">
+            <form action="vistapantallaprincipa.html">
                 <div class="container-grid2">
                     <div class="item-1">
                         <label for="nombre">Nombre y apellido</label>
