moviendo los .js a carpeta JS

--- a/vistaregistro.html
+++ b/vistaregistro.html
@@ -42,7 +42,7 @@
     </main>
     <!-- Footer -->
     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>
-    <script src="./vistaregistro.js"></script>
+    <script src="./JS/vistaregistro.js"></script>
 </body>
 
 </html>
