--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="CSS/inicioSesion.css">
         <link rel="stylesheet" href="CSS/footer.css">
+        <script src="JS/index.js"></script>
         <title>Inicio de sesión</title>
     </head>
 
@@ -22,6 +23,5 @@
         </main>
         <!-- Footer -->
         <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="auto"></iframe>
-        <script src="./index.js"></script>
     </body>
 </html>
