--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/vistapantallaprincipal.css">
     <link rel="stylesheet" href="CSS/footer.css">
+    <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+    <script src="./reusables/getNombreUsuario.js"></script>
+    <script src="./JS/vistapantallaprincipal.js"></script>
     <title>Pantalla Principal</title>
 </head>
 <body class="body">
@@ -37,18 +40,102 @@
 </section>
 <section class="cuerpo-principal">
     <section class="albumes">
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Flema.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Hermetica.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Horcas.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Horcas.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Kataklysm.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/motorhead.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Nightwish.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Pantera.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-    <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Sonata artica.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="">
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="" />
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="" />
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/Flema.jpg" alt="">
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/Hermetica.jpg" alt="">
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/Horcas.jpg" alt="">
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/Horcas.jpg" alt="">
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/Kataklysm.jpg" alt="">
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/motorhead.jpg" alt="">
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/Nightwish.jpg" alt="">
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/Pantera.jpg" alt="">
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
+    <a href="vistamusicasonando.html">
+        <article class="article-img">
+            <img class="img-albumes" src="Img/Sonata artica.jpg" alt="">
+            <span class="estrella-album">
+                <i class="fa-regular fa-star fa-2xl"></i>
+            </span>
+        </article>
+    </a>
 </section>
 <section class="reproductor">
     <span class="play"><i class="fa-solid fa-play fa-2xl"></i></span>
@@ -58,9 +145,6 @@
 </section>
 
 <!-- Footer -->
-<iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>    
-<script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
-<script src="./reusables/getNombreUsuario.js"></script>
-<script src="./vistapantallaprincipa.js"></script>
+<iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe> 
 </body>
 </html>
