--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/vistapantallaprincipal.css">
     <link rel="stylesheet" href="CSS/footer.css">
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
-    <script src="./reusables/getNombreUsuario.js"></script>
+    
     <script src="./JS/vistapantallaprincipal.js"></script>
     <title>Pantalla Principal</title>
 </head>
@@ -40,103 +40,103 @@
 </section>
 <section class="cuerpo-principal">
     <section class="albumes">
-    <a href="vistamusicasonando.html">
-        <article class="article-img">
-            <img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="">
+            <article class="article-img">
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="" />
+                </a>
+                <span class="estrella-album">
+                    <i class="fa-regular fa-star fa-2xl" id = "star1"></i>
+                </span>
+            </article>
+            <article class="article-img">
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="" />
+                </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "star2"></i>
             </span>
         </article>
-    </a>
-    <a href="vistamusicasonando.html">
         <article class="article-img">
-            <img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="" />
+            <a href="vistamusicasonando.html">
+                <img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="" />
+            </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "star3"></i>
             </span>
         </article>
-    </a>
-    <a href="vistamusicasonando.html">
         <article class="article-img">
-            <img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="" />
+            <a href="vistamusicasonando.html">
+                <img class="img-albumes" src="Img/Flema.jpg" alt="" />
+            </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "star4"></i>
             </span>
         </article>
-    </a>
-    <a href="vistamusicasonando.html">
         <article class="article-img">
-            <img class="img-albumes" src="Img/Flema.jpg" alt="">
+            <a href="vistamusicasonando.html">
+                <img class="img-albumes" src="Img/Hermetica.jpg" alt="" />
+            </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "star5"></i>
             </span>
         </article>
-    </a>
-    <a href="vistamusicasonando.html">
         <article class="article-img">
-            <img class="img-albumes" src="Img/Hermetica.jpg" alt="">
+            <a href="vistamusicasonando.html">
+                <img class="img-albumes" src="Img/Horcas.jpg" alt="" />
+            </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "star6"></i>
             </span>
         </article>
-    </a>
-    <a href="vistamusicasonando.html">
         <article class="article-img">
-            <img class="img-albumes" src="Img/Horcas.jpg" alt="">
+            <a href="vistamusicasonando.html">
+                <img class="img-albumes" src="Img/Horcas.jpg" alt="" />
+            </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "star7"></i>
             </span>
         </article>
-    </a>
-    <a href="vistamusicasonando.html">
         <article class="article-img">
-            <img class="img-albumes" src="Img/Horcas.jpg" alt="">
-            <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
-            </span>
-        </article>
-    </a>
-    <a href="vistamusicasonando.html">
-        <article class="article-img">
-            <img class="img-albumes" src="Img/Kataklysm.jpg" alt="">
-            <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
-            </span>
-        </article>
-    </a>
-    <a href="vistamusicasonando.html">
-        <article class="article-img">
-            <img class="img-albumes" src="Img/motorhead.jpg" alt="">
-            <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
-            </span>
-        </article>
-    </a>
-    <a href="vistamusicasonando.html">
-        <article class="article-img">
-            <img class="img-albumes" src="Img/Nightwish.jpg" alt="">
-            <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
-            </span>
-        </article>
-    </a>
-    <a href="vistamusicasonando.html">
-        <article class="article-img">
-            <img class="img-albumes" src="Img/Pantera.jpg" alt="">
-            <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
-            </span>
-        </article>
-    </a>
-    <a href="vistamusicasonando.html">
-        <article class="article-img">
-            <img class="img-albumes" src="Img/Sonata artica.jpg" alt="">
-            <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl"></i>
-            </span>
-        </article>
-    </a>
-</section>
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/Kataklysm.jpg" alt="" />
+                </a>
+                <span class="estrella-album">
+                    <i class="fa-regular fa-star fa-2xl" id = "star8"></i>
+                </span>
+            </article>
+            <article class="article-img">
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/motorhead.jpg" alt="" />
+                </a>
+                <span class="estrella-album">
+                    <i class="fa-regular fa-star fa-2xl" id = "star9"></i>
+                </span>
+            </article>
+            <article class="article-img">
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/Nightwish.jpg" alt="" />
+                </a>
+                <span class="estrella-album">
+                    <i class="fa-regular fa-star fa-2xl" id = "star10"></i>
+                </span>
+            </article>
+            <article class="article-img">
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/Pantera.jpg" alt="" />
+                </a>
+                <span class="estrella-album">
+                    <i class="fa-regular fa-star fa-2xl" id = "star11"></i>
+                </span>
+            </article>
+            <article class="article-img">
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/Sonata artica.jpg" alt="" />
+                </a>
+                <span class="estrella-album">
+                    <i class="fa-regular fa-star fa-2xl" id = "star12"></i>
+                </span>
+            </article>
+    </section>
 <section class="reproductor">
     <span class="play"><i class="fa-solid fa-play fa-2xl"></i></span>
     <span class="circle"><i class="fa-solid fa-circle fa-2xl"></i></span>
@@ -146,5 +146,6 @@
 
 <!-- Footer -->
 <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe> 
+<script src="./reusables/getNombreUsuario.js"></script>
 </body>
 </html>
