agrego cerrar session

--- a/vistamusicasonando.html
+++ b/vistamusicasonando.html
@@ -109,6 +109,7 @@
     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe></body>
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
     <script src="./reusables/getNombreUsuario.js"></script>
+    <script src="./reusables/cerrarSession.js"></script>
 
 </body>
 </html>
