--- a/vistamiscancionesfavoritass.html
+++ b/vistamiscancionesfavoritass.html
@@ -108,6 +108,7 @@
     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe></body>
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
     <script src="./reusables/getNombreUsuario.js"></script>
+    <script src="./reusables/cerrarSession.js"></script>
 
 </body>
 </html>
