--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -147,5 +147,6 @@
 <!-- Footer -->
 <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe> 
 <script src="./reusables/getNombreUsuario.js"></script>
+<script src="./reusables/cerrarSession.js"></script>
 </body>
 </html>
