--- a/vistaperfil.html
+++ b/vistaperfil.html
@@ -52,6 +52,7 @@
 <!-- Footer -->
 <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>
 <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+<script src="./JS/vistaperfil.js"></script>
 <script src="./reusables/getNombreUsuario.js"></script>
 
 </body>
