cambios para implementar lo de las estrellas guard

--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -42,58 +42,58 @@
     <section class="albumes">
             <article class="article-img">
                 <a href="vistamusicasonando.html">
-                    <img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="" />
+                    <img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="Destruction" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star1"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "destruction"></i>
                 </span>
             </article>
             <article class="article-img">
                 <a href="vistamusicasonando.html">
-                    <img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="" />
+                    <img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="Arch Enemy" />
                 </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star2"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "archEnemy"></i>
             </span>
         </article>
         <article class="article-img">
             <a href="vistamusicasonando.html">
-                <img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="" />
+                <img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="Megadeth" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star3"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "megadeth"></i>
             </span>
         </article>
         <article class="article-img">
             <a href="vistamusicasonando.html">
-                <img class="img-albumes" src="Img/Flema.jpg" alt="" />
+                <img class="img-albumes" src="Img/Flema.jpeg" alt="Flema" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star4"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "flema"></i>
             </span>
         </article>
         <article class="article-img">
             <a href="vistamusicasonando.html">
-                <img class="img-albumes" src="Img/Hermetica.jpg" alt="" />
+                <img class="img-albumes" src="Img/Hermetica.jpg" alt="Hermetica" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star5"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "hermetica"></i>
             </span>
         </article>
         <article class="article-img">
             <a href="vistamusicasonando.html">
-                <img class="img-albumes" src="Img/Horcas.jpg" alt="" />
+                <img class="img-albumes" src="Img/Horcas.jpg" alt="Horcas" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star6"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "horcas"></i>
             </span>
         </article>
         <article class="article-img">
             <a href="vistamusicasonando.html">
-                <img class="img-albumes" src="Img/Horcas.jpg" alt="" />
+                <img class="img-albumes" src="Img/Rancid.jpeg" alt="Rancid" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star7"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "rancid"></i>
             </span>
         </article>
         <article class="article-img">
@@ -101,7 +101,7 @@
                     <img class="img-albumes" src="Img/Kataklysm.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star8"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "katalysm"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -109,7 +109,7 @@
                     <img class="img-albumes" src="Img/motorhead.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star9"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "motorhead"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -117,7 +117,7 @@
                     <img class="img-albumes" src="Img/Nightwish.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star10"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "nightwish"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -125,7 +125,7 @@
                     <img class="img-albumes" src="Img/Pantera.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star11"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "pantera"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -133,7 +133,7 @@
                     <img class="img-albumes" src="Img/Sonata artica.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star12"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "sonataArtica"></i>
                 </span>
             </article>
     </section>
