--- a/vistaperfil.html
+++ b/vistaperfil.html
@@ -41,11 +41,11 @@
                 </article>
             </form>
             <a href="planespremium.html">Premium</a>
-            <a href="index.html">Eliminar usuario</a>
+            <a class="eliminarusuario" href="index.html" data-usuario="identificadorUnico">Eliminar usuario</a>
         </section>
         <section class="botones">
             <a class = "boton" href="vistapantallaprincipa.html"><button>Volver al home</button></a>
-            <a class = "boton" href=""><button>Guardar</button></a>
+            <a class = "boton guardar" href=""><button>Guardar</button></a>
         </section>
     </main>
 
