borro value que me olvide borrar

--- a/vistaperfil.html
+++ b/vistaperfil.html
@@ -41,7 +41,7 @@
                 </article>
             </form>
             <a href="planespremium.html">Premium</a>
-            <a class="eliminarusuario" href="index.html" data-usuario="identificadorUnico">Eliminar usuario</a>
+            <a class="eliminarusuario" href="index.html">Eliminar usuario</a>
         </section>
         <section class="botones">
             <a class = "boton" href="vistapantallaprincipa.html"><button>Volver al home</button></a>
