agrego cerrar session (#19)

--- a/vistaperfil.html
+++ b/vistaperfil.html
@@ -54,6 +54,7 @@
 <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
 <script src="./JS/vistaperfil.js"></script>
 <script src="./reusables/getNombreUsuario.js"></script>
+<script src="./reusables/cerrarSession.js"></script>
 
 </body>
 </html>
