--- a/vistamisalbumes.html
+++ b/vistamisalbumes.html
@@ -42,7 +42,7 @@
 		<section class="albumes">
 			<article class="article-img">
 				<a href="vistamusicasonando.html">
-					<img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="">
+					<img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="Destruction">
 				</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="destruction"></i>
@@ -50,7 +50,7 @@
 				</article>
 				<article class="article-img">
 					<a href="vistamusicasonando.html">
-						<img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="">
+						<img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="Arch Enemy">
 					</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="archEnemy"></i>
@@ -58,7 +58,7 @@
 				</article>
 				<article class="article-img">
 					<a href="vistamusicasonando.html">
-						<img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="">
+						<img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="Megadeth">
 					</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="megadeth"></i>
@@ -66,7 +66,7 @@
 				</article>
 				<article class="article-img">
 					<a href="vistamusicasonando.html">
-						<img class="img-albumes" src="Img/Flema.jpg" alt="">
+						<img class="img-albumes" src="Img/Flema.jpeg" alt="Flema">
 					</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="flema"></i>
@@ -74,7 +74,7 @@
 				</article>
 			<article class="article-img">
 					<a href="vistamusicasonando.html">
-						<img class="img-albumes" src="Img/Hermetica.jpg" alt="">
+						<img class="img-albumes" src="Img/Hermetica.jpg" alt="Hermetica">
 					</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="hermetica"></i>
@@ -82,7 +82,7 @@
 				</article>
 			<article class="article-img">
 					<a href="vistamusicasonando.html">
-						<img class="img-albumes" src="Img/Horcas.jpg" alt="">
+						<img class="img-albumes" src="Img/Horcas.jpg" alt="Horcas">
 					</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="horcas"></i>
@@ -90,7 +90,7 @@
 				</article>
 			<article class="article-img">
 					<a href="vistamusicasonando.html">
-						<img class="img-albumes" src="Img/Rancid.jpeg" alt="">
+						<img class="img-albumes" src="Img/Rancid.jpeg" alt="Rancid">
 					</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="rancid"></i>
@@ -98,7 +98,7 @@
 				</article>
 			<article class="article-img">
 					<a href="vistamusicasonando.html">
-						<img class="img-albumes" src="Img/Kataklysm.jpg" alt="">
+						<img class="img-albumes" src="Img/Kataklysm.jpg" alt="Katalysm">
 					</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="katalysm"></i>
@@ -106,7 +106,7 @@
 				</article>
 			<article class="article-img">
 					<a href="vistamusicasonando.html">
-						<img class="img-albumes" src="Img/motorhead.jpg" alt="">
+						<img class="img-albumes" src="Img/motorhead.jpg" alt="Motorhead">
 					</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="motorhead"></i>
@@ -114,7 +114,7 @@
 				</article>
 			<article class="article-img">
 					<a href="vistamusicasonando.html">
-						<img class="img-albumes" src="Img/Nightwish.jpg" alt="">
+						<img class="img-albumes" src="Img/Nightwish.jpg" alt="Nightwish">
 					</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="nightwish"></i>
@@ -122,7 +122,7 @@
 				</article>
 			<article class="article-img">
 					<a href="vistamusicasonando.html">
-						<img class="img-albumes" src="Img/Pantera.jpg" alt="">
+						<img class="img-albumes" src="Img/Pantera.jpg" alt="Panter">
 					</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="pantera"></i>
@@ -130,7 +130,7 @@
 				</article>
 			<article class="article-img">
 					<a href="vistamusicasonando.html">
-						<img class="img-albumes" src="Img/Sonata artica.jpg" alt="">
+						<img class="img-albumes" src="Img/Sonata artica.jpg" alt="Sonata Artica">
 					</a>
 					<span class="estrella-album">
 						<i class="fa-regular fa-star fa-2xl" id="sonataArtica"></i>
