nuevo bool para el login - logout

--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="CSS/vistapantallaprincipal.css">
     <link rel="stylesheet" href="CSS/footer.css">
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
-    
-    <script src="./JS/vistapantallaprincipal.js"></script>
     <title>Pantalla Principal</title>
 </head>
 <body class="body">
@@ -32,8 +30,10 @@
         </ul>
     </nav>
     <section class="sectionimgbajonav">
-        <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="">
-        <span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl"></i></span>
+        <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="seven spires">
+        <span class="estrella-cancion">
+            <i class="fa-regular fa-star fa-2xl" id ="sevenSpires"></i>
+        </span>
         <article class="lorem">Segundo álbum de estudio de este cuarteto estadounidense que, tras conocerse en la escuela superior de música y saber que tenían gustos similares, iniciaron este proyecto con la idea de crear un nuevo enfoque en el que centrar el metal sinfónico. Mucho más teatral, más cinemático y bebiendo de vertientes musicales tan dispares como el power, death melódico, black, Stoner, doom e incluso música clásica.
         </article>
     </section>
@@ -148,5 +148,6 @@
 <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe> 
 <script src="./reusables/getNombreUsuario.js"></script>
 <script src="./reusables/cerrarSession.js"></script>
+<script src="./JS/vistapantallaprincipal.js"></script>
 </body>
 </html>
