proceso final de estrellas en fav y sesion

--- a/vistabuscar.html
+++ b/vistabuscar.html
@@ -32,27 +32,113 @@
             </ul>
         </nav>
         <section class="sectionimgbajonav">
-            <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="">
-            <span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl"></i></span>
+            <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="seven spires">
+			<span class="estrella-cancion">
+				<i class="fa-regular fa-star fa-2xl" id ="sevenSpires"></i>
+			</span>
             <article class="lorem">Segundo álbum de estudio de este cuarteto estadounidense que, tras conocerse en la escuela superior de música y saber que tenían gustos similares, iniciaron este proyecto con la idea de crear un nuevo enfoque en el que centrar el metal sinfónico. Mucho más teatral, más cinemático y bebiendo de vertientes musicales tan dispares como el power, death melódico, black, Stoner, doom e incluso música clásica.
             </article>
         </section>
     </section >
     <section class="cuerpo-principal">
         <section class="albumes">
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Flema.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Hermetica.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Horcas.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Horcas.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Kataklysm.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/motorhead.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Nightwish.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Pantera.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-            <a href="vistamusicasonando.html"><article class="article-img"><img class="img-albumes" src="Img/Sonata artica.jpg" alt=""><span class="estrella-album"><i class="fa-regular fa-star fa-2xl"></i></span></article></a>
-        </section>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="Destruction">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="destruction"></i>
+				</span>
+			</article>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="Arch Enemy">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="archEnemy"></i>
+				</span>
+			</article>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="Megadeth">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="megadeth"></i>
+				</span>
+			</article>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/Flema.jpeg" alt="Flema">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="flema"></i>
+				</span>
+			</article>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/Hermetica.jpg" alt="Hermetica">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="hermetica"></i>
+				</span>
+			</article>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/Horcas.jpg" alt="Horcas">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="horcas"></i>
+				</span>
+			</article>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/Rancid.jpeg" alt="Rancid">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="rancid"></i>
+				</span>
+			</article>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/Kataklysm.jpg" alt="Katalysm">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="katalysm"></i>
+				</span>
+			</article>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/motorhead.jpg" alt="Motorhead">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="motorhead"></i>
+				</span>
+			</article>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/Nightwish.jpg" alt="Nightwish">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="nightwish"></i>
+				</span>
+			</article>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/Pantera.jpg" alt="Panter">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="pantera"></i>
+				</span>
+			</article>
+			<article class="article-img">
+				<a href="vistamusicasonando.html">
+					<img class="img-albumes" src="Img/Sonata artica.jpg" alt="Sonata Artica">
+				</a>
+				<span class="estrella-album">
+					<i class="fa-regular fa-star fa-2xl" id="sonataArtica"></i>
+				</span>
+			</article>
+		</section>
         <section class="reproductor">
             <span class="play"><i class="fa-solid fa-play fa-2xl"></i></span>
             <span class="circle"><i class="fa-solid fa-circle fa-2xl"></i></span>
@@ -64,6 +150,7 @@
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
     <script src="./reusables/getNombreUsuario.js"></script>
     <script src="./reusables/cerrarSession.js"></script>
+    <script src="./JS/vistapantallaprincipal.js"></script>
 
 </body>
 </html>
