--- a/vistamiscancionesfavoritass.html
+++ b/vistamiscancionesfavoritass.html
@@ -15,7 +15,7 @@
             <h2 class="nombre-usuario">Nombre de usuario</h2>
             <a class="cerrarsesion" href="index.html">Cerrar sesion</a> 
         </span>
-        <a class="imgperfil" href="vistaperfil.html"><img  src="https://picsum.photos/50/50" alt="imagen perfil"></a>
+        <a class="imgperfil" href="vistaperfil.html"><img src="https://picsum.photos/50/50" alt="imagen perfil"></a>
     </header>
     <section class="navegador">
         <nav>
@@ -31,7 +31,7 @@
         </nav>
         <section class="sectionimgbajonav">
             <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="">
-            <span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl"></i></span>
+            <span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl" id ="sevenSpires"></i></span>
             <article class="lorem">Segundo álbum de estudio de este cuarteto estadounidense que, tras conocerse en la escuela superior de música y saber que tenían gustos similares, iniciaron este proyecto con la idea de crear un nuevo enfoque en el que centrar el metal sinfónico. Mucho más teatral, más cinemático y bebiendo de vertientes musicales tan dispares como el power, death melódico, black, Stoner, doom e incluso música clásica.
             </article>
         </section>
@@ -109,6 +109,7 @@
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
     <script src="./reusables/getNombreUsuario.js"></script>
     <script src="./reusables/cerrarSession.js"></script>
+    <script src="./JS/vistapantallaprincipal.js"></script>
 
 </body>
 </html>
