Marian/estrellas en principal (#20)
* moviendo los .js a carpeta JS

* estrellitas funcionando

* vista pagar con nombre de usuario funcando

* cambios para implementar lo de las estrellas guard

* alts en albums

* nuevo bool para el login - logout

* proceso final de estrellas en fav y sesion

--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="CSS/vistapantallaprincipal.css">
     <link rel="stylesheet" href="CSS/footer.css">
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
-    
-    <script src="./JS/vistapantallaprincipal.js"></script>
     <title>Pantalla Principal</title>
 </head>
 <body class="body">
@@ -32,8 +30,10 @@
         </ul>
     </nav>
     <section class="sectionimgbajonav">
-        <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="">
-        <span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl"></i></span>
+        <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="seven spires">
+        <span class="estrella-cancion">
+            <i class="fa-regular fa-star fa-2xl" id ="sevenSpires"></i>
+        </span>
         <article class="lorem">Segundo álbum de estudio de este cuarteto estadounidense que, tras conocerse en la escuela superior de música y saber que tenían gustos similares, iniciaron este proyecto con la idea de crear un nuevo enfoque en el que centrar el metal sinfónico. Mucho más teatral, más cinemático y bebiendo de vertientes musicales tan dispares como el power, death melódico, black, Stoner, doom e incluso música clásica.
         </article>
     </section>
@@ -42,58 +42,58 @@
     <section class="albumes">
             <article class="article-img">
                 <a href="vistamusicasonando.html">
-                    <img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="" />
+                    <img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="Destruction" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star1"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "destruction"></i>
                 </span>
             </article>
             <article class="article-img">
                 <a href="vistamusicasonando.html">
-                    <img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="" />
+                    <img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="Arch Enemy" />
                 </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star2"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "archEnemy"></i>
             </span>
         </article>
         <article class="article-img">
             <a href="vistamusicasonando.html">
-                <img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="" />
+                <img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="Megadeth" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star3"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "megadeth"></i>
             </span>
         </article>
         <article class="article-img">
             <a href="vistamusicasonando.html">
-                <img class="img-albumes" src="Img/Flema.jpg" alt="" />
+                <img class="img-albumes" src="Img/Flema.jpeg" alt="Flema" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star4"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "flema"></i>
             </span>
         </article>
         <article class="article-img">
             <a href="vistamusicasonando.html">
-                <img class="img-albumes" src="Img/Hermetica.jpg" alt="" />
+                <img class="img-albumes" src="Img/Hermetica.jpg" alt="Hermetica" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star5"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "hermetica"></i>
             </span>
         </article>
         <article class="article-img">
             <a href="vistamusicasonando.html">
-                <img class="img-albumes" src="Img/Horcas.jpg" alt="" />
+                <img class="img-albumes" src="Img/Horcas.jpg" alt="Horcas" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star6"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "horcas"></i>
             </span>
         </article>
         <article class="article-img">
             <a href="vistamusicasonando.html">
-                <img class="img-albumes" src="Img/Horcas.jpg" alt="" />
+                <img class="img-albumes" src="Img/Rancid.jpeg" alt="Rancid" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "star7"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "rancid"></i>
             </span>
         </article>
         <article class="article-img">
@@ -101,7 +101,7 @@
                     <img class="img-albumes" src="Img/Kataklysm.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star8"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "katalysm"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -109,7 +109,7 @@
                     <img class="img-albumes" src="Img/motorhead.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star9"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "motorhead"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -117,7 +117,7 @@
                     <img class="img-albumes" src="Img/Nightwish.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star10"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "nightwish"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -125,7 +125,7 @@
                     <img class="img-albumes" src="Img/Pantera.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star11"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "pantera"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -133,7 +133,7 @@
                     <img class="img-albumes" src="Img/Sonata artica.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "star12"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "sonataArtica"></i>
                 </span>
             </article>
     </section>
@@ -148,5 +148,6 @@
 <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe> 
 <script src="./reusables/getNombreUsuario.js"></script>
 <script src="./reusables/cerrarSession.js"></script>
+<script src="./JS/vistapantallaprincipal.js"></script>
 </body>
 </html>
